# CIR-2

./: CMakeLists.txt  README.md
Fraction/: CMakeLists.txt  Fraction.cpp  Fraction.hpp  main.cpp
OOP_introduction/: CMakeLists.txt  shape_cpp.cpp
TP/: CMakeLists.txt  TP.c  TP.cpp  TP.h
TP 1/: TP.c  TP.h
TP 2/: CMakeLists.txt  Exercice 1.cpp  Exercice 2.cpp  Exercice 3.cpp  Exercice 4.cpp  Point3D.cpp  Point3D.hpp  Trajectory.hpp  texte.txt
